# artifacte-seeker

./: .gitignore  8004-INTEGRATION.md  ANCHOR_BUILD_COMPLETE.md  Anchor.toml  BAXUS_INTEGRATION.md  ESCROW_AUCTION_SYSTEM.md  FEATURES_COMPLETED.md  M2_PROXY_BUY_IMPLEMENTATION.md  ON_CHAIN_BUILD.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-hack.mjs  test-me-buy4.mjs  test-onchain.mjs  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
components/: AssetCard.tsx  AuctionCard.tsx  AuctionCountdownTimer.tsx  BidHistory.tsx  ClawChat.tsx  Countdown.tsx  Footer.tsx  HomeTCGSection.tsx  LoadingSpinner.tsx  MobileNav.tsx  Navbar.tsx  PriceHistory.tsx  SkeletonCard.tsx  Toast.tsx  ToastContainer.tsx  VerifiedBadge.tsx  WalletProvider.tsx
data/: allowlist.json  baxus-bottles.json  oracle-lookup.json  wallet-whitelist.json
docs/: METADATA_STANDARD.md
hooks/: useAgentRegistry.ts  useAuctionProgram.ts  useWalletConnect.ts
lib/: allowlist.ts  auction-idl.json  auction-idl.ts  auction-program.ts  auction_idl.json  data.ts  m2-buy.ts  me-buy-execute.ts  me-buy.ts  metadata-reader.ts  useM2Buy.ts
programs/auction/: Cargo.toml
programs/auction/src/: lib.rs
public/: manifest.json  sw.js
scripts/: baxus-sync.mjs  cc-sync.mjs  create-8004-collection.mjs  create-collection.mjs  test-variant-picker.mjs
sync-engine/: README.md  artifacte-client.mjs  ebay-client.mjs  package-lock.json  package.json  server.mjs
tests/: auction.test.ts  rwa-nft.test.ts
(+69 files in other folders)
